fix(SkillCardDialog): adjusts icon positioning on mobile

--- a/components/sections/Skills/SkillCard/SkillCardDialog/SkillCardDialog.module.css
+++ b/components/sections/Skills/SkillCard/SkillCardDialog/SkillCardDialog.module.css
@@ -147,6 +147,6 @@ html[data-reduced-motion='true'] .dialog {
   }
 
   .image {
-    transform: translate(10%);
+    transform: translate(-30%, -10%);
   }
 }
